--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="wrapper">
             <div class="header_logo">
                 <a href="#!" class="header__logo-link">
@@ -36,7 +36,7 @@
                 <img src="./img/header_call.png" alt="Вызов" class="phone">
             </div>
         </div>
-    </header> -->
+    </header>
 
     <div class="header2 row">
         <div class="header2-left row">
